--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,16 @@
 name = "Rivet"
 version = "0.1.0"
 edition = "2024"
+description = "A Terminal UI Discord Client in Rust"
+repository = "https://github.com/YetAnotherMechanicusEnjoyer/Rivet"
+homepage = "https://github.com/YetAnotherMechanicusEnjoyer/Rivet"
+readme = "README.md"
+license = "MIT"
+authors = [
+  "YetAnotherMechanicusEnjoyer <https://github.com/YetAnotherMechanicusEnjoyer>",
+]
+keywords = ["api", "terminal", "discord", "tui", "tokio", "crossterm"]
+categories = ["command-line-utilities"]
 
 [dependencies]
 chrono = "0.4.42"
