[UPDATE] Rust CI/CD

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -97,7 +97,8 @@ jobs:
       - name: Commit version
         run: |
           git add Cargo.toml
-          git commit -m "[RELEASE] Bump bersion to ${{ steps.version_extract.outputs.VERSION }} before publishing"
+          git commit -m "[RELEASE] Bump version to ${{ steps.version_extract.outputs.VERSION }} before publishing"
+          git push
 
       - run: cargo publish
         env:
